// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details Page loader shows correctly 1`] = `
<div>
  <div
    class="pf-l-bullseye"
  >
    <span
      aria-label="Contents"
      aria-valuetext="Loading..."
      class="pf-c-spinner pf-m-xl"
      role="progressbar"
    >
      <span
        class="pf-c-spinner__clipper"
      />
      <span
        class="pf-c-spinner__lead-ball"
      />
      <span
        class="pf-c-spinner__tail-ball"
      />
    </span>
  </div>
</div>
`;

exports[`Details Page redirects when can't read products 1`] = `<div />`;

exports[`Details Page renders data 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
      data-ouia-component-type="PF4/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-c-breadcrumb__list"
      >
        <li
          class="pf-c-breadcrumb__item"
        >
          <a
            href="/"
          >
            Subscription Inventory
          </a>
        </li>
        <li
          class="pf-c-breadcrumb__item"
        >
          <span
            class="pf-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          TEST Name
           
        </li>
      </ol>
    </nav>
    <h1
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
      widget-type="InsightsPageHeaderTitle"
    >
      TEST Name
    </h1>
    <ul
      class="pf-c-list pf-m-plain"
    >
      <li
        class="pf-u-mt-md"
      >
        <b>
          SKU: 
        </b>
        TESTSKU
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Quantity: 
        </b>
        3
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support level: 
        </b>
        TEST serviceLevel
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support type: 
        </b>
        TEST serviceType
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Capacity: 
        </b>
        test
         
        <span
          class="pf-c-badge pf-m-read"
        >
          2
        </span>
      </li>
    </ul>
  </section>
</div>
`;

exports[`Details Page renders not available for missing data 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
      data-ouia-component-type="PF4/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-c-breadcrumb__list"
      >
        <li
          class="pf-c-breadcrumb__item"
        >
          <a
            href="/"
          >
            Subscription Inventory
          </a>
        </li>
        <li
          class="pf-c-breadcrumb__item"
        >
          <span
            class="pf-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          
           
        </li>
      </ol>
    </nav>
    <h1
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
      widget-type="InsightsPageHeaderTitle"
    />
    <ul
      class="pf-c-list pf-m-plain"
    >
      <li
        class="pf-u-mt-md"
      >
        <b>
          SKU: 
        </b>
        Not Available
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Quantity: 
        </b>
        0
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support level: 
        </b>
        Not Available
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support type: 
        </b>
        Not Available
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Capacity: 
        </b>
        Not Available
      </li>
    </ul>
  </section>
</div>
`;
